# bevy_rapier

./: Cargo.toml
bevy_rapier2d/: Cargo.toml
bevy_rapier2d/examples/: boxes2.rs  contact_filter2.rs  despawn2.rs  events2.rs  joints2.rs  joints_despawn2.rs  locked_rotations2.rs  multiple_colliders2.rs  player_movement2.rs
bevy_rapier3d/: Cargo.toml
bevy_rapier3d/examples/: boxes3.rs  contact_filter3.rs  despawn3.rs  events3.rs  joints3.rs  joints_despawn3.rs  locked_rotations3.rs  multiple_colliders3.rs  ray_casting3.rs  static_trimesh3.rs
src/: lib.rs
src/dynamics/: rigid_body.rs
src/geometry/: collider.rs  collider_impl.rs
src/physics/: collider_component_set.rs  components.rs  mod.rs  plugins.rs  resources.rs  rigid_body_component_set.rs  systems.rs  wrapper.rs
src/plugin/: context.rs  plugin.rs  systems.rs
src/render/: mod.rs  plugin.rs  systems.rs
src/render/entities/: camera.rs  collider.rs  mod.rs  path.rs  position.rs
src/render/mesh/: capsule.rs  convex_mesh.rs  cube.rs  cylinder.rs  mod.rs  polyline.rs  segment.rs  sphere.rs  trimesh.rs
src/render/render/: mod.rs
src/render/render/shaders/: wireframe.frag  wireframe.vert
src/render/systems/: collider.rs  mod.rs  path.rs  position.rs
