[package]
name = "bevy_rapier2d"
version = "0.12.0"
authors = ["Sébastien Crozet <developer@crozet.re>"]
description = "2-dimensional physics engine in Rust, official Bevy plugin."
documentation = "http://docs.rs/bevy_rapier2d"
homepage = "http://rapier.rs"
repository = "https://github.com/dimforge/bevy_rapier"
readme = "README.md"
keywords = [ "physics", "dynamics", "rigid", "real-time", "joints" ]
license = "Apache-2.0"
edition = "2018"
resolver = "2"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
path = "../src/lib.rs"
required-features = [ "dim2" ]

[features]
default = [ "dim2", "render" ]
dim2 = []
render = [ "bevy/render" ]
parallel = [ "rapier2d/parallel" ]
simd-stable = [ "rapier2d/simd-stable" ]
simd-nightly = [ "rapier2d/simd-nightly" ]
wasm-bindgen = [ "rapier2d/wasm-bindgen" ]
serde-serialize = [ "rapier2d/serde-serialize" ]
enhanced-determinism = [ "rapier2d/enhanced-determinism" ]

[dependencies]
bevy = { git = "https://github.com/bevyengine/bevy", branch = "main", default-features = false }
nalgebra = { version = "0.30.1", features = [ "convert-glam020" ] }
# Don't enable the default features because we don't need the ColliderSet/RigidBodySet
rapier2d = { version = "0.12.0-alpha.0", default-features = false, features = [ "dim2", "f32" ] }
bevy_polyline = { git = "https://github.com/aevyrie/bevy_poly_line", branch = "bevy-main" }
bevy_stylized_wireframe = { git = "https://github.com/aceeri/bevy_stylized_wireframe", branch = "main" }
wgpu-types = "0.12"

[dev-dependencies]
bevy = { git = "https://github.com/bevyengine/bevy", branch = "main" }
oorandom = "11"